2007-08-08  Michael Snyder  <msnyder@access-company.com>

	* varobj.c (value_of_root): Move alloc after return to avoid leak.

	* tui/tui-layout.c (tui_set_layout): Dead code, dead variable.

	* top.c (command_line_input): Memory leak.

	* solib-svr4.c (open_symbol_file_object): Memory leak.
	(svr4_current_sos): Ditto.
	(enable_break): Ditto.

	* cp-valprint.c (cp_print_hpacc_virtual_table_entries): Memory leak.

	* dwarf2read.c (add_partial_symbol): Memory leak.

2007-08-06  Michael Snyder  <msnyder@access-company.com>

	* ada-lang.c (desc_bounds): Comparison of function address to NULL.

2007-08-05  Jim Blandy  <jimb@codesourcery.com>

	* macroexp.c (init_buffer): Remove testing code that overrides the
	caller's length guess.
	(gather_arguments): Use a larger initial size, now that the vector
	growth code has been exercised.

2007-08-05  Pedro Alves  <pedro_alves@portugalmail.pt>

	* solib-target.c (solib_target_relocate_section_addresses): Add
	orig_delta to addr_high.

2007-08-04  Michael Snyder  <msnyder@access-company.com>

	* remote-fileio.c (remote_fileio_func_write): Memory leak.

	* breakpoint.c (print_one_breakpoint): Off by one error.

	* tracepoint.c (add_register): Off by one error.
	(stringify_collection_list): Free malloc buffer.

2007-08-03  Michael Snyder  <msnyder@access-company.com>

	* mi-cmd-var.c (mi_cmd_var_delete): Remove unused variable,
	stop memory leak, straighten out cleanups.

	* jv-lang.c (java_link_class_type): Guard against NULL.

2007-08-02  Michael Snyder  <msnyder@access-company.com>

	* gdbtypes.c (create_set_type): Test should only be done within
	the preceeding if block.  Otherwise, variable is uninitialized.

	* gdbtypes.c (check_typedef): Guard NULL.

2007-08-01  Michael Snyder  <msnyder@access-company.com>

	* cli/cli-decode.c (lookup_cmd): Check for null earlier, to 
	avoid dereference in lookup_cmd_1.

	* tui/tui-data.c (tui_alloc_content): Move assign out of if, 
	clean up long lines.